# dude

./: .all-contributorsrc  .gitignore  404.html  Dockerfile  Makefile  README.md  basic_usage.html  cli.html  example.py  features.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html  sitemap.xml  style.css
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  documentation.yml  pypi.yml  python.yml  testpypi.yml
advanced/: 01_setup.html  02_navigate.html  03_grouping.html  04_url_pattern_matching.html  05_prioritization.html  06_custom_storage.html  07_the_scraper_application_class.html  08_async.html  09_beautifulsoup4.html  10_parsel.html  11_lxml.html  12_pyppeteer.html  13_selenium.html  14_events.html  15_start_requests.html  16_helper_functions.html  index.html
docs/: basic_usage.md  cli.md  features.md  index.md  reference.md  supported_parsers.md
docs/advanced/: 01_setup.md  02_navigate.md  03_grouping.md  04_url_pattern_matching.md  05_prioritization.md  06_custom_storage.md  07_the_scraper_application_class.md  08_async.md  09_beautifulsoup4.md  10_parsel.md  11_lxml.md  12_pyppeteer.md  13_selenium.md  14_events.md  15_start_requests.md  16_helper_functions.md  index.md
docs/features/: index.md
docs/supported_parser_backends/: index.md  migrating.md
docs/supported_parsers/: migrating.md
dude/: __init__.py  application.py  base.py  beautifulsoup.py  context.py  decorators.py  parsel.py  playwright.py  playwright_scraper.py  rule.py  scraped_data.py  scraper.py  storage.py
dude/optional/: beautifulsoup_scraper.py  bs4_parser.py  lxml_scraper.py  parsel_parser.py  parsel_scraper.py  pyppeteer_scraper.py  selenium_scraper.py  utils.py
examples/: application.py  async.py  async_soup.py  bs4_async.py  bs4_sync.py  custom_storage.py  dude.html  empty.html  events.py  flat.py  google.py  group_decorator.py  group_in_select.py  grouped.py  grouping.py  lxml_async.py  lxml_sync.py  parsel_async.py  parsel_sync.py  priority.py  pyppeteer_async.py  request_object.py  save_per_page.py  selenium_async.py  selenium_sync.py  single_handler.py  soup.py  url_pattern.py
examples/flat-vs-grouping/: example.html  flat.py  grouping.py
search/: search_index.json
supported_parser_backends/: index.html  migrating.html
tests/: conftest.py  dude.html  test_async.py  test_bs4.py  test_lxml.py  test_parsel.py  test_playwright_async.py  test_playwright_sync.py  test_pyppeteer.py  test_selector.py  test_selenium.py  test_simple.py  test_sync.py
