[tool.poetry]
name = "pydude"
version = "0.1.0-alpha.0"
repository = "https://github.com/roniemartinez/dude"
description = "dude uncomplicated data extraction"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = [
    "scraping"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "dude" },
]

[tool.poetry.urls]
"Donate" = "https://github.com/sponsors/roniemartinez"

[tool.poetry.scripts]
dude = "dude:cli"

[tool.poetry.dependencies]
python = "^3.7"
playwright = "^1.19.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^22.1"
isort = "^5.10.1"
mypy = "^0.931"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^7.0.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
tabulate = { git = "https://github.com/astanin/python-tabulate" }
types-PyYAML = "^6.0.4"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
atomic = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
"""

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
extend-exclude = """
setup.py,
"""

[tool.pytest.ini_options]
norecursedirs = ["examples"]
addopts = """\
    --doctest-modules \
    --cov=dude \
    --cov-report=term-missing \
    --cov-report=xml \
    --cov-report=html \
    --cov-report=html \
    -vv \
"""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
